[YG] - fixed padding for reviews on mobile

--- a/packages/navigate-theme/src/styles/pages/_home.scss
+++ b/packages/navigate-theme/src/styles/pages/_home.scss
@@ -239,6 +239,7 @@
 
     @include respond(phone) {
       height: 100%;
+      padding: 2rem;
     }
   }
 
